--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Noah Sayre <nsayre@redhat.com>"]
 python = "^3.7.1"
 pandas = "^1.1.4"
 numpy = "^1.19.4"
+scikit-hts = "^0.5.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1.2"
