--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,4 +24,5 @@ jobs:
       - name: Run all tests
         run: |
           poetry install
+          cd tests
           poetry run python -m pytest --cov ctfr
