--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ sphinx-rtd-theme = "^0.5.0"
 mypy = "^0.790"
 recommonmark = "^0.6.0"
 jupyter = "^1.0.0"
+isort = "^5.8.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
