--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ mypy = "^0.812"
 isort = "^5.8.0"
 recommonmark = "^0.7.1"
 jupyter = "^1.0.0"
+dephell = "^0.8.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
