--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,22 +27,10 @@ jobs:
         run: |
           poetry install
           cd tests
-          poetry run python -m pytest --cov pyreco
-
-      - name: Statistics
-        if: success()
-        run: |
-          pip install coverage
-          coverage report
-          coverage xml
+          poetry run python -m pytest --cov=pyreco --cov-report=xml
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
-        if: always()
-        continue-on-error: true
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: coverage.xml
-          flags: cpu,pytest
-          name: CPU-coverage
-          fail_ci_if_error: false
